# cards_agent

./: .gitignore  Dockerfile  README.md  bot.py  config.py  pyproject.toml  requirements.txt
data_json/: cards_ru.json  cards_ru_part.json
utils/: cards.py  explanations_533830183.json  explanations_6230932062.json  extract.py  giga.py
