[project]
name = "cards_agent-master"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "aiogram>=3.21.0",
    "python-docx==1.1.2",
    "langchain-gigachat==0.3.10",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "aiohttp-socks==0.9.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
