[project]
name = "cards_agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aleksandr Ivanov", email = "alex.iv.vad@gmail.com"},
]
dependencies = ["aiogram>=3.21.0", "python-docx>=1.2.0", "langchain-gigachat>=0.3.12", "pandas>=2.3.1", "python-dotenv>=1.1.1", "aiohttp-socks>=0.10.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
